# serializer version: 1
# name: test_label_attacher[documents0]
  dict({
    'id': 'foo',
    'labels': list([
      dict({
        'color': '#a83432',
        'description': 'This is a bug',
        'id': 1,
        'name': 'Bug',
      }),
      dict({
        'color': '#03fc20',
        'description': 'This is a question',
        'id': 2,
        'name': 'Question',
      }),
    ]),
    'name': 'Foo',
  })
# ---
# name: test_label_attacher[documents1]
  list([
    dict({
      'id': 'foo',
      'labels': list([
        dict({
          'color': '#03fc20',
          'description': 'This is a question',
          'id': 2,
          'name': 'Question',
        }),
      ]),
      'name': 'Foo',
    }),
    dict({
      'id': 'bar',
      'labels': list([
        dict({
          'color': '#a83432',
          'description': 'This is a bug',
          'id': 1,
          'name': 'Bug',
        }),
        dict({
          'color': '#03fc20',
          'description': 'This is a question',
          'id': 2,
          'name': 'Question',
        }),
      ]),
      'name': 'Bar',
    }),
    dict({
      'id': 'baz',
      'labels': list([
      ]),
      'name': 'Baz',
    }),
  ])
# ---
# name: test_sample_count_attacher[labels0]
  dict({
    'color': '#a83432',
    'count': 1,
    'description': 'This is a bug',
    'id': 1,
    'name': 'Bug',
  })
# ---
# name: test_sample_count_attacher[labels1]
  list([
    dict({
      'color': '#03fc20',
      'count': 2,
      'description': 'This is a question',
      'id': 2,
      'name': 'Question',
    }),
    dict({
      'color': '#02db21',
      'count': 0,
      'description': 'This is a info',
      'id': 3,
      'name': 'Info',
    }),
  ])
# ---
